NODE_MAILER_FROM_EMAIL added in .env

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ AWS_ACCESS_KEY=your-aws-access-key-id
 
 # AWS Secret Access Key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+
+# Verified Sender email
+NODE_MAILER_FROM_EMAIL=your-verified-SES-email
